Added initial irc views, updated the controllers to support

--- a/webirc/app/views/connect/index.rhtml
+++ b/webirc/app/views/connect/index.rhtml
@@ -1,3 +1,4 @@
+<%=h @gnar %>
 <% form_for :connection, @connection do |f| -%>
   <label for="nick">Nickname: <%= f.text_field :nick %></label>
   <label for="realname">Real Name: <%= f.text_field :realname %></label>
