--- a/webirc/public/stylesheets/irc.css
+++ b/webirc/public/stylesheets/irc.css
@@ -6,3 +6,90 @@ label {
 label > input {
 
 }
+
+
+html {
+  margin: 0;
+  padding: 0;
+  background: red;
+}
+body {
+  color: black;
+  background-color: white;
+  margin: 0;
+  padding: 0;
+}
+
+div {
+  border: 1px solid blue; 
+}
+
+#chat {
+  font-family: monospace;
+  width: 80%;
+  margin-bottom: 50px;
+}
+
+#chat ul {
+  margin: 0.5em;
+  padding: 0;
+}
+#chat li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-indent: 0;
+}
+
+#chat li .timestamp {
+}
+#chat li .nick {
+}
+
+#entry {
+  
+}
+
+#sidebar {
+  margin: 0;
+  padding: 0;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 20%;
+  height: 100%;
+  background: gray;
+}
+
+#refresh {
+  padding: 1em;
+}
+
+#name_list {
+/*  padding: 1em; */
+
+}
+
+#input_bar {
+  background: silver;
+  width: 80%;
+  margin: 0;
+  padding: 0;
+
+  position: fixed;
+  bottom: 0
+}
+#input_bar p {
+/*  margin: 0.5em; */
+  padding: 0
+}
+#input_bar form {
+  text-align: center;
+  margin: 0
+}
+#input_bar input#text {
+  width: 95%;
+}
+#input_bar input#send {
+
+}
